[package]
name = "floatDb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faiss = "0.11.0"
log = "0.4"
byteorder = "1"
zerocopy = "0.6"
num_cpus = "1.13"
cassandra-cpp = "1"
tokio = { version = "1", features = ["full"] }